--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@googlemaps/markerclusterer": "^2.0.15",
+    "@react-google-maps/api": "^2.18.1",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
@@ -14,7 +16,7 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
@@ -23,7 +25,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "react-native-dotenv": "^3.4.8"
   },
   "resolutions": {
     "metro": "^0.73.7",
